# ModernPortfolio

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  InterestYieldCurve.py  ModernPortfolio.py  README.md  SECURITY.md  SUPPORT.md  batch_fetcher.py  cache_maintenance.py  cache_manager.py  cache_standardize.py  cache_tools.py  convert_cache.py  csv_cache_inspector.py  csv_cache_manager.py  data_fetcher.py  fetch_and_validate.py  fix_nan_issue.py  portfolio_fix.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_optimizer.sh  test_data_quality.py  ticker_validator.py  tickers.csv  tickers_corrected.csv  utils.py
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug.yml  2-optimizer-correctness.yml  3-enhancement.yml  config.yml
.github/workflows/: ci.yml
csv_data_cache/: metadata.json
csv_data_cache/dividends/: AAPL.csv  ABBV.csv  ABI.BR_div.csv  ABI_BR.csv  ACN.csv  ACN_div.csv  ADYEN.AS_div.csv  ADYEN_AS.csv  AI.PA_div.csv  AI_PA.csv  AMR.csv  AMR_div.csv  AMZN.csv  ASM.AS_div.csv  ASML.AS_div.csv  ASML.csv  ASML_AS.csv  ASML_div.csv  ASM_AS.csv  AVGO.csv  BABA.csv  BABA_div.csv  BAC.csv  BESI.AS_div.csv  BESI_AS.csv  BMW.DE_div.csv  BMW_DE.csv  BNP.PA_div.csv  BNP_PA.csv  BTC.csv  BTC_div.csv  COST.csv  CRM.csv  CRM_div.csv  CS.PA_div.csv  CS_PA.csv  CVX.csv  DAC.csv  DAC_div.csv  DGE.L_div.csv  (+71 more)
csv_data_cache/metadata/: AAPL_meta.json  ABBV_meta.json  ABI.BR_meta.json  ACN_meta.json  ADYEN.AS_meta.json  AI.PA_meta.json  AMR_meta.json  AMZN_meta.json  ASM.AS_meta.json  ASML.AS_meta.json  ASML_meta.json  AVGO_meta.json  BABA_meta.json  BAC_meta.json  BESI.AS_meta.json  BIDU_meta.json  BMW.DE_meta.json  BNP.PA_meta.json  BRK-B_meta.json  BTC_meta.json  COST_meta.json  HD_meta.json  (+50 more)
data_cache/: cache_metadata.json  div_data.pkl  info_data.json  price_data.pkl
portfolio_analysis/: correlations.csv  optimal_weights.json  returns_summary.csv
scripts/: run_optimizer.sh  test_modern_portfolio.sh
src/: cache_maintenance.py  cache_tools.py  cli.py  data_fetcher.py  graphing.py  ml_optimizer.py  portfolio_fix.py  test_yahoo.py
tests/: test_cli.py  test_hrp.py  test_optimization.py  test_pipeline.py  test_reporting.py
(+413 files in other folders)
